readme file added

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,5 @@
-</main>
+<!-- * Dynamic footer -->
 
 <footer>
-  <!-- Step 4 - Add a dynamic year to the footer using JS. -->
-  <p>Copyright © <%= new Date().getFullYear() %>
-  </p>
+		<p>Copyright © <%= new Date().getFullYear() %></p>
 </footer>
-</body>
-
-</html>
