--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,25 @@
-<!-- views/partials/header.ejs -->
-<header>
-	<h1>My Blog</h1>
-	<nav>
-		<a href="/">Home</a>
-		<a href="/create">Create Post</a>
-	</nav>
-</header>
-<link rel="stylesheet" href="/css/styles.css" />
+<!--* views/partials/header.ejs -->
+
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/css/styles.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+		/>
+
+		<title>My Blog</title>
+	</head>
+	<body>
+		<header>
+			<h1>My Blog</h1>
+			<nav>
+				<a href="/">Home</a>
+				<a href="/create">Create Post</a>
+			</nav>
+		</header>
+	</body>
+</html>
